--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.sql.init.mode=never
 #
 #springdoc.api-docs.enabled=true
 #springdoc.swagger-ui.enabled=true
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
+#springdoc.api-docs.path=/v3/api-docs
+#springdoc.swagger-ui.path=/swagger-ui.html
 
 
 
